Delete carrier done

--- a/PKMXEN.JSClient/wwwroot/index.html
+++ b/PKMXEN.JSClient/wwwroot/index.html
@@ -28,6 +28,7 @@
                 <th>Age</th>
                 <th>Salary</th>
                 <th>Total number of parcels</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody id="resultarea">
