--- a/PKMXEN.JSClient/wwwroot/index.html
+++ b/PKMXEN.JSClient/wwwroot/index.html
@@ -17,7 +17,8 @@
         <input type="number" id="salary" />
         <label>Total number of parcels</label>
         <input type="number" id="tnop" />
-        <button type="button" onclick="createCarrier()">Add Carrier</button>
+        <button type="button" onclick="createCarrier()">Create</button>
+        <button type="button" onclick="updateData()">Edit</button>
     </div>
 
     <table>
