--- a/PKMXEN.JSClient/wwwroot/index.html
+++ b/PKMXEN.JSClient/wwwroot/index.html
@@ -17,8 +17,8 @@
         <input type="number" id="salary" />
         <label>Total number of parcels</label>
         <input type="number" id="tnop" />
-        <button type="button" onclick="createCarrier()">Create</button>
-        <button type="button" onclick="updateData()">Edit</button>
+        <button type="button" id="create" onclick="createCarrier()" style="display:block">Create</button>
+        <button type="button" id="edit" onclick="updateData()" style="display:none">Update</button>
     </div>
 
     <table>
