--- a/PKMXEN.JSClient/wwwroot/index.html
+++ b/PKMXEN.JSClient/wwwroot/index.html
@@ -9,6 +9,8 @@
     <h1>Carrier Catalog</h1>
 
     <div id="formdiv">
+        <label>Id</label>
+        <input type="number" id="carrierid" />
         <label>Name</label>
         <input type="text" id="name" />
         <label>Age</label>
@@ -18,7 +20,7 @@
         <label>Total number of parcels</label>
         <input type="number" id="tnop" />
         <button type="button" id="create" onclick="createCarrier()" style="display:block">Create</button>
-        <button type="button" id="edit" onclick="updateData()" style="display:none">Update</button>
+        <button type="button" id="edit" onclick="update()" style="display:none">Update</button>
     </div>
 
     <table>
